[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/spells and prefabs/Fire.gd" type="Script" id=1]

[node name="Fire" type="Node2D"]
script = ExtResource( 1 )

[node name="cooldown" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="queue_cd" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="queue_cd" to="." method="_on_queue_cd_timeout"]
